email address changed for security reasons

--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
 
                             <div class="col-sm-3 col-xs-6">
 
-                                <a href="mailto:prathima.amula@gmail.com"><img src="img/Gmail2.png" class="social" width=" 120px"></a>
+                                <a href="@gmail.com"><img src="img/Gmail2.png" class="social" width=" 120px"></a>
 
                             </div>
 
