changed view page

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                     <p>
 
-                       I am an Electrical Engineer graduate with a passion towards learning Engineering and Technology.The zeal of learning new technical skills made me to persue my career  as a Full Stack Web Developer.I am always up for the challenge of learning new programming languages. <a href = "https://University Of Utah" target ="_blank" class ="embedded-link"></a>. 
+                       I am a Full Stack Web Developer with a passion towards Web Technology.The challenge to keep up with the pace of dynamic software industry by way of learning and application of new programming skills  made me choose a career in Software Development. <a href = "https://University Of Utah" target ="_blank" class ="embedded-link"></a>. 
 
                     </p>
 
@@ -223,7 +223,7 @@
 
                 <div class="col-lg-8 col-lg-offset-2">
 
-                    <p>I am currently persuing my education as a Full Stack Web Developer at University Of Utah coding BootCamp and will be graduating in March-2018.
+                    <p>
                      My specific software development skills include:Javascript,jQuery,NodeJS,Express,HTML/CSS3,Bootstrap,Git,Responsive Design,API/JSON,RESTful API,Firebase,MySQL,MongoDb,AJAX.
                      I am also Entry Level American Board Certified QA Analyst(ASTQB).
 
