--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
                 <div class="col-sm-4 portfolio-item">
 
-                    <a href="https://pamula.github.io/Liri-Bot/" target="_blank" class="portfolio-link">
+                    <a href="https://github.com/pamula/Liri-Bot" target="_blank" class="portfolio-link">
 
                     <!-- <a href="#portfolioModal-liri" class="portfolio-link" data-toggle="modal"> -->
 
